# vega-python-sdk

./: .gitignore  Makefile  README.md  buf.gen.yaml  generate_vega_init.py  pyproject.toml
.github/workflows/: python.yml
tests/: test_auth.py  test_client.py  test_pow.py
vega/: auth.py  client.py  pow.py
vega/grpc/: client.py
vega/proto/blockexplorer/api/v1/: blockexplorer_pb2.py
vega/proto/data_node/api/v2/: trading_data_pb2.py
vega/proto/vega/: assets_pb2.py  chain_events_pb2.py  data_source_pb2.py  governance_pb2.py  markets_pb2.py  oracle_pb2.py  vega_pb2.py
vega/proto/vega/api/v1/: core_pb2.py  corestate_pb2.py
vega/proto/vega/checkpoint/v1/: checkpoint_pb2.py
vega/proto/vega/commands/v1/: commands_pb2.py  data_pb2.py  signature_pb2.py  transaction_pb2.py  validator_commands_pb2.py
vega/proto/vega/data/v1/: data_pb2.py  spec_pb2.py
vega/proto/vega/events/v1/: events_pb2.py
vega/proto/vega/snapshot/v1/: snapshot_pb2.py
vega/proto/vega/wallet/v1/: wallet_pb2.py
vegawallet/: auth.py  client.py
vegawallet/grpc/: client.py
