[tool.poetry]
name = "vega-python-sdk"
version = "0.1.3"
description = "Python bindings for processing and sending Vega transactions"
authors = ["Tom McLean <tom@vegaprotocol.io>"]
license = "MIT"
readme = "README.md"
packages = [{include = "vega"}]

[tool.poetry.dependencies]
python = "^3.8"
bip-utils = "^2.7.1"
protoc-gen-openapiv2 = "^0.0.1"
grpcio-tools = "^1.59.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
jinja2 = "^3.1.2"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
